Revision history for Data-SearchEngine-ElasticSearch

{{$NEXT}}

0.08 Nov 18 2011
  * Make update an alias of add (Stevan Little)

0.07 Nov 10 2011
  * Default to page 1 so that empty results to blow up Data::Paginator.

0.06 Oct 22 2011
  * POD fixes

0.05 Oct 22 2011
  * Use the debug and raw attributes of D:SE::Query

0.04 Oct 21 2011
  * Include item in ElasticSearch.pm to prevent runtime errors.

0.03 Jul 17 2011
  * Make _index a value in the Item for search results.

0.02 Jul 16 2011
  * Fix multiple facets not working

0.01    Date/time
        First version, released on an unsuspecting world.
