@@ -1,6 +1,7 @@
 Revision history for Data-SearchEngine-ElasticSearch
 
 {{$NEXT}}
+  * Add an engine method (Stevan Little)
 
 0.08 Nov 18 2011
   * Make update an alias of add (Stevan Little)
